--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -165,7 +165,8 @@
                                   ng-show="container.status !== 'assign_requested'" ng-if="container.subtype!='unallocated'">
                                 <span class="title_text">TP{{container.tripId}}  </span>
 
-                                <ui-select ng-model="person.selected" on-select="onSelectCallback($item, $model,container)" title="Choose a vehicle">
+
+                                <ui-select  ng-if="!container.vehicle.length" ng-model="person.selected" on-select="onSelectCallback($item, $model,container)" title="Choose a vehicle">
                                   <ui-select-match placeholder="Choose.">{{$select.selected.name}}</ui-select-match>
                                   <ui-select-choices repeat="person as person in vehicleList | propsFilter: {model: $select.search, vehicleNumber: $select.search}" refresh="onVehicleSearch($select.search)" refresh-delay="400">
                                     <div ><b>{{person.vehicleNumber}}</b></div>
@@ -174,6 +175,23 @@
                                     </small>
                                   </ui-select-choices>
                                 </ui-select>
+
+                                <ul class="employee-list-group hide"  ng-if="container.vehicle.length" ng-if="container.vehicle.length" dnd-disable-if="container.vehicle.length >= 1">
+                                    <li ng-repeat="person in container.vehicle" class="input-group background-{{person.type}} employee-list-group-item vehicle-assign" ng-if="container.vehicle.length">
+                                      <span class="input-group-addon addon-prepend vehicle_assign">
+                                        <div class="inner-addon">
+                                          <i class="fa fa-car vehicle_button" style="z-index: 8;"></i>
+                                          <i class="fa fa-times close_button"
+                                            ng-click="removeVehicle(person, container)"></i>
+                                        </div>
+                                      </span>
+
+                                      <div class="vehicle_no">
+                                        <div class="text-small">{{person.vehicleNumber}}</div>
+                                      </div>
+                                    </li>
+                                  
+                                </ul>
                               </div>
                             </div>
                             <div class="employee-cluster-panel-body" ng-click='getCurrentVehicleLocation()'>
@@ -185,11 +203,11 @@
                                         <input type="checkbox" ng-model="container.guard_required" ng-change="checkBoxChanged(container)" ng-disabled="container.guard.length"
                                         name="route" class="tick guard_checkbox">
 
-                                      <span class="kilometer_time_duration" ng-class="{'bgRed':checkSiteDistance(container.total_distance)}">
+                                      <span class="kilometer_time_duration" ng-class="{'textRed':checkSiteDistance(container.total_distance)}">
                                           {{container.total_distance}} Km 
                                       </span>
                                       <span>|</span>
-                                      <span class="kilometer_time_duration" ng-class="{'bgRed':checkSiteTime(container.total_time)}">
+                                      <span class="kilometer_time_duration" ng-class="{'textRed':checkSiteTime(container.total_time)}">
                                           {{container.total_time}} Min
                                         </span>
                                     </div>
@@ -220,8 +238,39 @@
                                 </li>
                               </ul>
                             </div>
-                            <div class="vayau-panel-footer">
-                              <div class="row">
+                            <div class="vayau-panel-footer" ng-show="container.guard_required">
+                              <div ng-if="!container.guard.length">
+                                <ui-select ng-model="guard.selected" on-select="onSelectGuardCallback($item, $model,container)" title="Choose a guard">
+                                    <ui-select-match placeholder="Choose guard">{{$select.selected.firstName}} {{$select.selected.lastName}}</ui-select-match>
+                                    <ui-select-choices repeat="guard as guard in guardList | propsFilter: {firstName: $select.search, lastName: $select.search}">
+                                      <div ><b>{{guard.firstName}}-{{guard.lastName}}</b></div>
+                                      <small>
+                                         On Duty 
+                                      </small>
+                                    </ui-select-choices>
+                                  </ui-select>
+                              </div>
+                              <div ng-if="container.guard.length">
+                                  <ul class="employee-list-group" dnd-disable-if="container.guard.length >= 1">
+                                    <dnd-nodrag>
+                                      <li ng-repeat="person in container.guard" class="input-group background-{{person.type}} employee-list-group-item guard-assign" ng-if="container.guard.length">
+                                        <span class="input-group-addon addon-prepend vehicle-assign">
+                                          <div class="inner-addon">
+                                              <i class="fa fa-shield vehicle_button" style="z-index: 8;"></i>
+                                              <i class="fa fa-times close_button"
+                                                ng-click="removeGuard(person, container)"></i>
+                                            </div>
+                                        </span>
+
+                                        <div class="vehicle_no">
+                                          <div class="text-small">Guard Assigned</div>
+                                        </div>
+                                      </li>
+                                    </dnd-nodrag>
+                                </ul>
+                              </div> 
+                              
+                              <div class="row hide">
                                 <div class="col-md-6 pad-right-0">
                                   <ul class="employee-list-group" dnd-list="container.vehicle"
                                     dnd-drop="dropVehicleCallback(container,index, item, external, type)"
@@ -387,7 +436,7 @@
     </section>
 
     <div class="row vayau-sidebar  guard-sidebar" ng-if="isGuardSidebarView">
-      <div ng-repeat="list in guards" class="col-md-12">
+      <div  class="col-md-12">
         <div class="vaayu-sidebar-panel">
           <div class="vaayu-sidebar-heading">
             <div class="row">
@@ -442,36 +491,65 @@
               <div class="col-md-6 text-right">
                 <a ng-click="reset()" class="clear-filter hide_driver_field">Clear filter</a>
               </div>
-            </div>
+            </div>  <ul class="emplyoee-list-group" dnd-list="list.guard" dnd-effect-allowed="copy"
+            dnd-allowed-types="list.allowedTypes" dnd-disable-if="list.guard.length >= list.max"
+            dnd-dragover="dragoverCallback(list,index, external, type)"
+            dnd-drop="dropCallback(list,index, item, external, type)">
+            <li ng-repeat="guard in list.guard | filter: { firstName: name,userName:name  }" no-drop
+              dnd-draggable="guard" dnd-effect-allowed="move" dnd-type="guard.type"
+              dnd-disable-if="guard.type == 'unknown'" dnd-moved="list.guard.splice($index, 1)"
+              class="background-{{guard.type}} input-group employee-list-group-item">
+              <span class="input-group-addon addon-prepend">
+                <div class="inner-addon">
+                  <i class="fa fa-shield" aria-hidden="true"></i>
+                </div>
+              </span>
 
-            <ul class="emplyoee-list-group" dnd-list="list.guard" dnd-effect-allowed="copy"
-              dnd-allowed-types="list.allowedTypes" dnd-disable-if="list.guard.length >= list.max"
-              dnd-dragover="dragoverCallback(list,index, external, type)"
-              dnd-drop="dropCallback(list,index, item, external, type)">
-              <li ng-repeat="guard in list.guard | filter: { firstName: name,userName:name  }" no-drop
-                dnd-draggable="guard" dnd-effect-allowed="move" dnd-type="guard.type"
-                dnd-disable-if="guard.type == 'unknown'" dnd-moved="list.guard.splice($index, 1)"
-                class="background-{{guard.type}} input-group employee-list-group-item">
-                <span class="input-group-addon addon-prepend">
-                  <div class="inner-addon">
-                    <i class="fa fa-shield" aria-hidden="true"></i>
+              <div class="inner-text">
+                <div class="text-small">On Duty</div>
+                <div class="text-big"> {{guard.firstName}} {{guard.lastName}}</div>
+              </div>
+
+              <div class="input-group-addon addon-append">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+              </div>
+            </li>
+
+            <li class="dndPlaceholder">
+              Drop any <strong>{{list.allowedTypes.join(' or ')}}</strong> here
+            </li>
+          </ul>
+
+            <div ng-repeat="list in guards">
+              <ul class="emplyoee-list-group" dnd-list="list.guard" dnd-effect-allowed="copy"
+                dnd-allowed-types="list.allowedTypes" dnd-disable-if="list.guard.length >= list.max"
+                dnd-dragover="dragoverCallback(list,index, external, type)"
+                dnd-drop="dropCallback(list,index, item, external, type)">
+                <li ng-repeat="guard in list.guard | filter: { firstName: name,userName:name  }" no-drop
+                  dnd-draggable="guard" dnd-effect-allowed="move" dnd-type="guard.type"
+                  dnd-disable-if="guard.type == 'unknown'" dnd-moved="list.guard.splice($index, 1)"
+                  class="background-{{guard.type}} input-group employee-list-group-item">
+                  <span class="input-group-addon addon-prepend">
+                    <div class="inner-addon">
+                      <i class="fa fa-shield" aria-hidden="true"></i>
+                    </div>
+                  </span>
+
+                  <div class="inner-text">
+                    <div class="text-small">On Duty</div>
+                    <div class="text-big"> {{guard.firstName}} {{guard.lastName}}</div>
                   </div>
-                </span>
 
-                <div class="inner-text">
-                  <div class="text-small">On Duty</div>
-                  <div class="text-big"> {{guard.firstName}} {{guard.lastName}}</div>
-                </div>
+                  <div class="input-group-addon addon-append">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                  </div>
+                </li>
 
-                <div class="input-group-addon addon-append">
-                  <i class="fa fa-bars" aria-hidden="true"></i>
-                </div>
-              </li>
-
-              <li class="dndPlaceholder">
-                Drop any <strong>{{list.allowedTypes.join(' or ')}}</strong> here
-              </li>
-            </ul>
+                <li class="dndPlaceholder">
+                  Drop any <strong>{{list.allowedTypes.join(' or ')}}</strong> here
+                </li>
+              </ul>
+            </div>
           </div>
           <div class="row vaayu-sidebar-footer">
             <div class="col-md-6 pr-2">
