--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -201,7 +201,9 @@
                                         </span>
                                     </div>
                                     <div class="col-md-5 vehicle_type">
-                                      {{container.vehicle_type}} <i class="fa fa-pencil"></i>
+                                      <span ng-if="container.vehicle_type=='HATCHBACK'">HB</span>
+                                      <span ng-if="container.vehicle_type!='HATCHBACK'">{{container.vehicle_type}}</span>
+                                       <i class="fa fa-pencil"></i>
                                     </div>
                                   </div>
                                 </div>
