--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -628,7 +628,7 @@
 .kilometer_time_duration {
   font-family: "Roboto";
   font-size: 10px;
-  font-weight: 900;
+  /* font-weight: 900; */
   line-height: 1.5;
   color: #000;
 }
@@ -1169,11 +1169,10 @@
 }
 
 .vehicle_type {
-  font-size: 9px;
-  font-weight: bold;
+  font-size: 11px;
   text-align: right;
-  padding-right: 26px !important;
-  padding-top: 3px;
+  /* padding-right: 26px !important; */
+  padding-top: 1px;
   cursor: pointer;
 }
 .employee-cluster-panel-title {
