adding vehicle sidebar style changes

--- a/app/views/trips/angular_views/_roster.html
+++ b/app/views/trips/angular_views/_roster.html
@@ -223,13 +223,13 @@
   <div class="row vayau-sidebar filter-sidebar" ng-if="isAddMenuOpen">
     <div class="col-md-12">
       <div class="vaayu-sidebar-panel">
-        <div class="vaayu-sidebar-heading">
+        <div class="vaayu-sidebar-heading" style="padding-top: 0;">
           <div class="row">
             <div class="col-md-8">
               <h4 class="float-left"><span class="vaayu-sidebar-title">Adding vehicle </span></h4>
             </div>
             <div class="col-md-4">
-              <button type="button" ng-click="hideAddMenu()" class="btn btn-close float-right">&#x2715;</button>
+              <button type="button" ng-click="hideAddMenu()" class="btn btn-close float-right" style="float: right; top: 0;">&#x2715;</button>
             </div>
           </div>
         </div>
@@ -282,13 +282,13 @@
                                     </div> -->
             </div>
 
-            <div class="row add-vehicle-card-border" style="margin-top: 2em">
+            <div class="row add-vehicle-card-border" style="margin-top: 1em">
               <div class="col-md-8">
                 <h5 class="text-center" style="margin: auto">Employee Count
               </div>
               <h5 class="text-center" style="margin: auto"><span>{{currentRoster.no_of_emp}} </span></h5>
             </div>
-            <div class="row add-vehicle-card-border" style="margin-top: 2em">
+            <div class="row add-vehicle-card-border" style="margin-top: 1em">
               <div class="col-md-8">
                 <h5 class="text-center" style="    margin: auto">Seating Capacity </h5>
               </div>
