--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -225,7 +225,7 @@
                                 </li>
                               
                                 <li class="dndPlaceholder">
-                                    Drop employee here
+                                    DROP HERE!
                                 </li>
                               </ul>
                             </div>
