filter button hidden

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -57,7 +57,7 @@
         <div class="btn-toolbar float-right pad-8 mt-5" role="toolbar">
 
           <div  style="float: right;">
-            <button type="button" ng-click="onFilter()" class="btn btn-terniary-blue margin-right">Filter</button>
+            <button type="button" ng-if="false" ng-click="onFilter()" class="btn btn-terniary-blue margin-right">Filter</button>
               <button type="button" ng-click="autoAllocate()" class="btn btn-terniary-blue margin-right">Auto Allocate</button>
               <button type="button" ng-click="toggleMap()" class="btn btn-terniary-blue margin-right"><span ng-if="isShowMap">Hide Map</span><span ng-if="!isShowMap">Show Map</span></button>
               <button type="button" ng-click="finalizeRoutes()" class="btn btn-terniary-blue">Finalize Route</button>
