--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,14 +1,15 @@
 .vayau-routing .card-panel .vaayu-dropzone .dndPlaceholder {
   display: flex;
-  height: 35px;
-  border-radius: 0 !important;
-  border: dashed 2px #e2e2e2;
-  background-color:#f9f9f9 !important;
+  height: 25px;
+  border-radius: 4px !important;
+  border: 0;
+  background-color:#dde1e7 !important;
   padding: 0px 12px;
   align-items: center;
-  color:#aeaeae;
+  color:#ebecf0;
+  margin-bottom: 2px;
   font-size: 12px;
-  opacity: 0.8;
+  /* opacity: 0.6; */
 }
 
 .vayau-routing .card-panel .vaayu-dropzone .employee-list-group .dndDraggingSource {
@@ -240,7 +241,7 @@
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-heading {
-  height: 28px;
+  height: 30px;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.16);
   background-color: #394266;
   display: flex;
@@ -325,9 +326,9 @@
 }
 
 .vayau-routing .employee-cluster-panel .employee-cluster-panel-body .employee-list-group-item {
-  border-radius: 0px;
-  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.16);
-  background-color:#ffffff;
+  border-radius: 2px;
+  box-shadow: 0px 2px 0px #d5d5d5;
+  background-color: #ffffff;
   margin-bottom: 5px;
   display: flex;
   padding: 2px 0px;
@@ -597,16 +598,22 @@
 .vayau-routing .vayau-panel-footer {
   background:#ebecf0;
 }
+.vayau-routing .bgOrange {
+  background: orange !important;
+}
+.marright_5 {
+  margin-right: -5px !important;
+}
 .vayau-routing .employee-cluster-panel-body .guard-icon {
-  border-radius: 4px;
-  padding: 3px 3px;
-  background:#242432;
+  border-radius: 4px 0 0 4px;
+  padding: 2px 4px;
+  background: #242432;
   height: 15px;
   width: 15px;
   display: flex;
   align-content: center;
   margin-right: 2px;
-  font-size: 11px;
+  font-size: 10px;
   color:#fff;
 }
 .vayau-routing .employee-cluster-panel-body .employee-list-group {
@@ -628,7 +635,7 @@
 .kilometer_time_duration {
   font-family: "Roboto";
   font-size: 10px;
-  font-weight: 900;
+  /* font-weight: 900; */
   line-height: 1.5;
   color: #000;
 }
@@ -925,7 +932,7 @@
 }
 
 .custom-panel-map {
-  width:210px !important;
+  /* width:210px !important; */
   margin-top: 0px;
 }
 
@@ -1132,6 +1139,7 @@
   .width-20 {
     width:20%;
     float:left;
+    padding-right: 20px;
   }
 
   .width-80.mapVisible {
@@ -1153,6 +1161,44 @@
   .width20 {
     width:20% !important;
     float:left;
+    padding-right: 20px;
+  }
+
+  @media (min-width: 1400px) {
+    .width80 {
+      width:87% !important;
+    }
+    .width20 {
+      width:13% !important;
+    }
+    .width-80 {
+      width:87% !important;
+    }
+    .width-20{
+      width:13% !important;
+    }
+
+    .width-80.mapVisible {
+      width:86% !important;
+    }
+  
+    .width-20.mapVisible {
+      width:14% !important;
+    }
+
+    /* .width-80 {
+      width:80%;
+    }
+    .width-20 {
+      width:20%;
+    }
+    .width-80.mapVisible {
+      width:80% !important;
+    }
+  
+    .width-20.mapVisible {
+      width:20% !important;
+    } */
   }
 
   /* .tempRoute {
@@ -1169,11 +1215,10 @@
 }
 
 .vehicle_type {
-  font-size: 9px;
-  font-weight: bold;
-  text-align: right;
-  padding-right: 26px !important;
-  padding-top: 3px;
+  font-size: 11px;
+  /* text-align: right; */
+  /* padding-right: 26px !important; */
+  padding-top: 1px;
   cursor: pointer;
 }
 .employee-cluster-panel-title {
@@ -1214,7 +1259,101 @@
 }
 .content > .content-body {
   font-size:12px !important;
+  padding: 0px 10px !important;
+}
+.data_in_style_btn {
+  border-radius: 0 4px 4px 0 !important;
+  border-left: 0 !important;
+}
+.vehicle_type {
+  width: 34px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  float: left;
 }
 .mt-5 {
   margin-top:5px;
+}
+.custom-select {
+  position: relative;
+  vertical-align: middle;
+  font-size: 10px;
+  width: 100px;
+  float: right;
+  margin-top: 1.3px;
+}
+.custom-select > a.dropdown-toggle {
+  line-height: 24px;
+  height: 25px;
+}
+
+.employee-cluster-panel-heading .ui-select-container.ui-select-bootstrap {
+  float:right;
+}
+/* .vayau-panel-footer .ui-select-container .ui-select-bootstrap {
+  width:100%;
+} */
+.employee-cluster-panel-heading .ui-select-container.ui-select-bootstrap .form-control {
+  height: 19px !important;
+  width: 95px;
+  margin-top: 5px;
+  max-width: 95px !important;
+  min-width: 95px !important;
+  line-height: 0.2;
+  border-radius: 4px;
+  box-shadow: none;
+}
+.vayau-panel-footer .ui-select-container.ui-select-bootstrap .form-control {
+  height: 26px !important;
+  width: 100%;
+  margin-top: 2px;
+  max-width: 100% !important;
+  min-width: 100% !important;
+  line-height: 0.7;
+  border-radius: 0;
+  box-shadow: none;
+}
+.btn-default-focus {
+  box-shadow: none !important;
+}
+ #input-outer {
+  height: 20px;
+  width: 94px;
+  float: right;
+  margin-top: 5px;
+}
+ #input-outer label {
+  width: 80%;
+  border: 0px;
+  border-radius: 4px 0 0 4px;
+  outline: none;
+  color:#000;
+  background:#fff;
+  font-size: 10px;
+  padding: 3px 4px;
+  max-height: 20px;
+  min-height: 20px;
+}
+#input-outer #clear {
+  float: right;
+  width: 20%;
+  background:#394266;
+  color:#fff;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  height: 20px;
+  max-height: 20px;
+  min-height: 20px;
+  font-size: 10px;
+  padding-top: 3px;
+  border-radius: 0 4px 4px 0;
+}
+
+#input-outer #clear:hover {
+  background: #ccc;
+}
+.textRed {
+  color:red !important;
 }
