--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -619,7 +619,7 @@
   min-height: 80px;
 }
 .vayau-routing .select_all_wrapper {
-  margin-top:5px !important;
+  margin-top:0 !important;
 }
 .vayau-routing .select_all_wrapper label {
   color:#000 !important;
@@ -628,7 +628,7 @@
   font-size: 12px;
 }
 .vayau-routing .select_all_wrapper  .hrLine {
-  margin: 3px 0 10px 0;
+  margin: 0px 0 10px 0;
 }
 .kilometer_time_duration {
   font-family: "Roboto";
