--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -11,7 +11,9 @@
   font-size: 12px;
   /* opacity: 0.6; */
 }
-
+.isSccorallable {
+  overflow-y: auto !important;
+}
 .vayau-routing .card-panel .vaayu-dropzone .employee-list-group .dndDraggingSource {
   border-radius: 0px;
   box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.16);
