Routing revert popup issue fixed

--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -385,7 +385,7 @@
               <div class="col-md-8">
                 <h3 class="float-left"><span class="vaayu-sidebar-title">Add Guard </span></h3>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 text-right">
                 <button type="button" ng-click="hideGuardSidebar()" class="btn btn-close float-right">&#x2715;</button>
               </div>
             </div>
@@ -487,9 +487,8 @@
                 <h3 class="float-left"><span class="vaayu-sidebar-title">Add Vehicle </span> <span
                     class="title-caption"></span></h3>
               </div>
-              <div class="col-md-2">
-                <button type="button" ng-click="hideVehicalSidebar()"
-                  class="btn btn-close float-right">&#x2715;</button>
+              <div class="col-md-2 text-right">
+                <button type="button" ng-click="hideVehicalSidebar()" class="btn btn-close float-right">&#x2715;</button>
               </div>
             </div>
           </div>
@@ -596,7 +595,7 @@
               <div class="col-md-8">
                 <h3 class="float-left"><span class="vaayu-sidebar-title">Filter </span></h3>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 text-right">
                 <button type="button" ng-click="hideFilterSidebar()" class="btn btn-close float-right">&#x2715;</button>
               </div>
             </div>
