--- a/app/views/trips/angular_views/_routing.html
+++ b/app/views/trips/angular_views/_routing.html
@@ -123,6 +123,7 @@
     </div>
 
 
+    <div class="dnd-scroll-area" dnd-scroll-area dnd-region="bottom" dnd-scroll-container="collectionList"></div>
     <section>
       <div class="row">
         <div class="col-md-12 hide">
@@ -154,8 +155,10 @@
             <hr class="hrLine">
         </div>
 
+        
         <div ng-class="isShowMap ? 'width80' : 'col-md-12 pright-0'">
-            <div class="card-panel">
+            
+            <div id="collectionList" class="card-panel">
                 <div ng-repeat="containers in model2">
                   <div class="vaayu-dropzone">
                         <div class="width-80" ng-class="{'mapVisible':isShowMap}"  masonry="" mesonry-option="{gutter: 10}"  load-images="false" reload-on-resize>
@@ -359,6 +362,7 @@
                   </div>
                 </div>
             </div>
+            
         </div>
         
         <div ng-init="initMap()" ng-class="isShowMap ? 'width20' : 'ng-hide'">
@@ -376,6 +380,7 @@
         </div>
       </div>
     </section>
+    <div class="dnd-scroll-area" dnd-scroll-area dnd-region="bottom" dnd-scroll-container="collectionList"></div>
 
     <div class="row vayau-sidebar  guard-sidebar" ng-if="isGuardSidebarView">
       <div ng-repeat="list in guards" class="col-md-12">
